Fixed wave gap

--- a/app/globals.css
+++ b/app/globals.css
@@ -55,6 +55,8 @@ body {
   position: absolute;
   top: 0;
   margin-top: -8rem;
+  width: 100dvw;
+  margin-right: -10px;
 }
 
 .features-img {
